[gd_scene load_steps=2 format=3 uid="uid://c4d8faf0a1b2c"]

[ext_resource type="Script" path="res://scripts/ui/RepairInteractionUI.gd" id="1"]

[node name="RepairInteractionUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95

[node name="CarLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Voiture: "
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="InterventionsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Interventions en attente:"

[node name="InterventionsList" type="ItemList" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Démarrer l'intervention"
disabled = true

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Prêt"
horizontal_alignment = 1
